paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_002/target.compile.log
error[E0596]: cannot borrow `set_g_return` as mutable, as it is not declared as mutable
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_002/target.rs:3:9
   |
 3 |     let set_g_return = |gval: i32, ret: i32| -> i32 {
   |         ^^^^^^^^^^^^ not mutable
 4 |         g = gval;
   |         - calling `set_g_return` requires mutable binding due to mutable borrow of `g`
...
 9 |     let x: i32 = if set_g_return(1, 1) != 0 {
   |                     ------------ cannot borrow as mutable
...
12 |         set_g_return(2, 1);
   |         ------------ cannot borrow as mutable
...
23 |     let x: i32 = if set_g_return(1, 0) != 0 {
   |                     ------------ cannot borrow as mutable
24 |         set_g_return(2, 1);
   |         ------------ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
 3 |     let mut set_g_return = |gval: i32, ret: i32| -> i32 {
   |         +++

error[E0506]: cannot assign to `g` because it is borrowed
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/cond_op_c4/sample_002/target.rs:8:5
  |
3 |     let set_g_return = |gval: i32, ret: i32| -> i32 {
  |                        ---------------------------- `g` is borrowed here
4 |         g = gval;
  |         - borrow occurs due to use in closure
...
8 |     g = 0;
  |     ^^^^^ `g` is assigned to here but it was already borrowed
9 |     let x: i32 = if set_g_return(1, 1) != 0 {
  |                     ------------ borrow later used here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0506, E0596.
For more information about an error, try `rustc --explain E0506`.